--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:gabrielhz/InventorySync.git",
   "author": "gabrielhz <gabrielramoscardoso@hotmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
