--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "@types/express": "^4.17.21",
     "eslint": "^9.1.1",
-    "typescript": "^5.4.5"
+    "globals": "^15.1.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.8.0"
   }
 }
