--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eslint/js": "^9.1.1",
     "@types/express": "^4.17.21",
     "eslint": "^9.1.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "globals": "^15.1.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0"
