--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/express": "^4.17.21",
     "eslint": "^9.1.1",
     "eslint-import-resolver-typescript": "^3.6.1",
