--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^9.1.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "globals": "^15.1.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0"
   }
