--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@eslint/js": "^9.1.1",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.8",
     "eslint": "^9.1.1",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "globals": "^15.1.0",
+    "jest": "^29.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0"
