--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2017",
     "lib": ["es6"],
-   "experimentalDecorators": true,
-   "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "rootDir": "./src",
-    "typeRoots": [
-      "/node_modules/@types",
-      ".src/@types"
-    ],
-    "resolveJsonModule": true,
+    "target": "es2017",
+    "sourceMap": true,
     "allowJs": true,
-    "outDir": "./dist",
     "removeComments": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
-  }
+    "pretty": true,
+    "resolveJsonModule": true,
+    "types": ["node", "jest"],
+    "typeRoots" : ["./node_modules/@types", "./src/@types"],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  },
 }
