--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "InventorySync",
+  "name": "inventorysync",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:gabrielhz/InventorySync.git",
+  "description": "InventorySync: A cutting-edge TypeScript project with a React frontend for seamless inventory management and synchronization.",
+  "main": "src/server.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/gabrielhz/InventorySync.git"
+  },
   "author": "gabrielhz <gabrielramoscardoso@hotmail.com>",
   "license": "MIT",
-  "scripts": {
-    "dev": "tsnd --respawn --transpile-only --ignore-watch node_modules src/server.ts"
+  "bugs": {
+    "url": "https://github.com/gabrielhz/InventorySync/issues"
+  },
+  "homepage": "https://github.com/gabrielhz/InventorySync#readme",
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.8",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.2.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.1.1",
-    "@rocketseat/eslint-config": "^2.2.2",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.8",
-    "eslint": "^9.1.1",
-    "globals": "^15.1.0",
-    "jest": "^29.7.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0"
   }
 }
