--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": "@rocketseat/eslint-config/node"
+  "extends": "@rocketseat/eslint-config/node",
+  "rules": {"no-unused-vars": "off", "@typescript-eslint/no-unused-vars": "off"}
 }
