--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "lib": ["es6"],
     "module": "commonjs",
     "target": "es2017",
+    "outDir": "./dist",
     "sourceMap": true,
     "allowJs": true,
     "removeComments": true,
