--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   "homepage": "https://github.com/gabrielhz/InventorySync#readme",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@swc/core": "^1.4.17",
+    "@swc/jest": "^0.2.36",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2",
     "tsx": "^4.8.2",
