--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "InventorySync: A cutting-edge TypeScript project with a React frontend for seamless inventory management and synchronization.",
   "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "tsx src/interface.ts",
     "dev": "tsx watch src/server.ts",
     "build": "tsup src"
@@ -31,6 +31,7 @@
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
     "tsx": "^4.8.2",
     "typescript": "^5.4.5"
