--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@swc/core": "^1.4.17",
     "@swc/jest": "^0.2.36",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.8",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
