--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
 {
   "extends": "@rocketseat/eslint-config/node",
-  "rules": {"no-unused-vars": "off", "@typescript-eslint/no-unused-vars": "off"}
+  "rules": {"no-unused-vars": "off", "@typescript-eslint/no-unused-vars": "off", "no-useless-constructor": "off", "@typescript-eslint/no-useless-constructor": "off"}
 }
